# AnC-Courses

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  build.sh  changelog.md  commento.Dockerfile  config.yaml  config.yaml.secret  config.yml.secret  docker-compose.dev.yml  docker-compose.test.yml  gendb.py  go.mod  go.sum  gqlgen.yml  level1.ipynb  main.go  readme.md  schema.graphql  supervisord.conf  waypoint.hcl
.circleci/: config.yaml  config.yml
.devcontainer/: dev.Dockerfile  devcontainer.json
.gitsecret/: install.sh
.keto/: access-policy.json  keto.yaml
.kratos/: .kratos.prod.yml  .kratos.yml  worker.go
.nginx/: nginx.conf  nginx.prod.conf
.oathkeeper/: access-rules.prod.yml  access-rules.yaml  oathkeeper.yaml  oathkeeper.yml
.secrets/: credentials.json.secret  token.json.secret
admin/: .htaccess  dev.Dockerfile  nuxt.config.js  package.json  tsconfig.json
api/: controller.go  fiber.go  router.go
auth/: Cargo.toml  Rocket.toml  authz.config.yml  authz.development.yml.secret  rogue.yml.secret
auth/src/: lib.rs  main.rs  parser.rs
auth/src/config/: cli.rs  mod.rs  yaml.rs
auth/src/controller/: handler.rs  mod.rs  model.rs
auth/src/db/: client.rs  mod.rs  mongo.rs
auth/src/graphql/: mod.rs  models.rs  parser.rs
client/: .eslintcache  dev.Dockerfile  nuxt.config.js  package.json  tsconfig.json
controller/: NewUser.go  courses.go
database/: courses.go  gendb.go  generate.py  mongo.go  users.go
googleapis/: client.go  drive.go
graph/: resolver.go  schema.resolvers.go
graphql/: schema.resolvers.go
(+213 files in other folders)
