[package]
name = "auth"
version = "0.1.0"
authors = ["Mshivam2409 <shivammalhotra08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
graphql-parser = "0.3.0"
mongodb = "1.1.1"
