[package]
name = "auth"
version = "0.1.0"
authors = ["Mshivam2409 <shivammalhotra08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
rocket = "0.4.7"
rocket_contrib = "0.4.7"
graphql-parser = "0.2.3"
yaml-rust = "0.4.5"