[package]
name = "auth"
version = "0.1.0"
authors = ["Mshivam2409 <shivammalhotra08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
serde = "1.0"
rocket = "0.4.7"
graphql-parser = "0.2.3"
yaml-rust = "0.4.5"
lazy_static = "1.4.0"
strum_macros = "0.20.1"
[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]
[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]